--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@typescript-eslint/parser": "^5.21.0",
     "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.5"
   }
