--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:prod": "tsc && vite build --mode production",
     "preview": "vite preview",
     "prepare": "husky install",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "lint:tsx": "eslint --ext .tsx src && eslint --ext .ts src"
   },
   "dependencies": {
     "react": "^18.0.0",
