--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "prepare": "husky install",
     "commit": "git-cz",
-    "lint:tsx": "eslint --ext .tsx src && eslint --ext .ts src"
+    "lint:tsx": "eslint --ext .tsx src && eslint --ext .ts src",
+    "lint": "prettier --write ."
   },
   "dependencies": {
     "react": "^18.0.0",
@@ -36,7 +37,8 @@
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3",
-    "vite": "^2.9.5"
+    "vite": "^2.9.5",
+    "vite-plugin-eslint": "^1.6.0"
   },
   "config": {
     "commitizen": {
