--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "test": "echo \"Error: I SHOULD FAIL LOLOLOLOLOL \" && exit 1",
     "dev": "vite --mode development",
     "build:test": "tsc && vite build --mode test",
     "build:prod": "tsc && vite build --mode production",
     "preview": "vite preview",
     "prepare": "husky install",
     "commit": "git-cz",
-    "lint:tsx": "eslint --ext .tsx src && eslint --ext .ts src",
-    "lint": "prettier --write ."
+    "lint-fix": "eslint --fix --ext .tsx,.ts,.js src/",
+    "lint-prettier": "prettier --write ."
   },
   "dependencies": {
     "react": "^18.0.0",
