--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.5",
     "vite-plugin-eslint": "^1.6.0"
