--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-  "*.{js,jsx,ts,tsx}": ["prettier --write .", "eslint --fix --ext"],
-  "*.md": ["prettier --write"]
+  "*.{js,jsx,ts,tsx}": ["prettier --write .", "eslint --fix --ext", "git add"],
+  "*.md": ["prettier --write", "git add"]
 }
