--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "husky": "^7.0.4",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "sass": "^1.52.1",
@@ -48,5 +50,9 @@
     "commitizen": {
       "path": "node_modules/cz-customizable"
     }
+  },
+  "engines": {
+    "node": ">= 16.5.0",
+    "npm": ">= 8.5.5"
   }
 }
